--- a/hw1/config.json
+++ b/hw1/config.json
@@ -3,5 +3,6 @@
     "REPORT_DIR": "./reports",
     "LOG_DIR": "./log",
     "TS_FILE": "log_analyzer.ts",
-    "SCRIPT_LOG": "log_analyzer.log"
+    "SCRIPT_LOG": "log_analyzer.log",
+    "ERR_THRS": 1000
 }
